--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color:rgb(240, 227, 43);
+    background-color:black;
 }
 
 header {
-    background-color:rgb(240, 227, 43);
-    color: rgb(255, 255, 255);
+    background-color:pink;
+    color:brown;
     text-align: center;
     padding: 2rem 0;
     position: relative;
@@ -29,7 +29,7 @@ header {
 }
 
 nav {
-    background-color:rgb(240, 227, 43);
+    background-color:pink;
     color: #fff;
     text-align: center;
 }
@@ -53,7 +53,7 @@ nav ul {
     }
 
     .section-content {
-        background-color:#fff;
+        background-color:#000;
         padding: 2vh;
         margin: 1rem;
         border-radius: 20px;
@@ -62,7 +62,7 @@ nav ul {
     }
 
     .download-button {
-        background-color: #333;
+        background-color: black;
         color: #fff;
         padding: 0.5rem 1rem;
         text-decoration: none;
@@ -72,15 +72,15 @@ nav ul {
     }
 
     .download-button:hover{
-        background-color:rgb(240, 227, 43);
+        background-color:pink;
         
     }
 
     footer{
         text-align: center;
         padding: 1rem 0;
-        background-color:rgb(240, 227, 43);
-        color:  rgb(255, 255, 255);
+        background-color:pink;
+        color:black;
 
     }
 
