--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ nav ul {
     }
 
     .section-content {
-        background-color:#000;
+        background-color:brown;
         padding: 2vh;
         margin: 1rem;
         border-radius: 20px;
