--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ nav ul {
         text-align: center;
         padding: 1rem 0;
         background-color:pink;
-        color:black;
+        color:brown;
 
     }
 
